# http-request-tests

reqwest_test/: Cargo.toml
reqwest_test/src/: main.rs
ureq/: Cargo.toml
ureq/src/: main.rs
